--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
     {% include header.html %}
 
     <section data-hook="main" class="container">
+      {% include breadcrumbs.html %}
+      
       {{ content }}
     </section>
 
