--- a/_includes/dashboard/dashboard.html
+++ b/_includes/dashboard/dashboard.html
@@ -20,72 +20,10 @@
                 {% if indicator.number == page.number %}
                     {% assign selected = "active" %}
                 {% endif %}
-                <a class="list-group-item {{ selected }}" href=".{{ indicator.permalink }}">{{ indicator.number }}</a>
+                <a class="list-group-item {{ selected }}" href=".{{ indicator.goal }}-{{ indicator.subgoal }}-{{ indicator.indicator }}">{{ indicator.number }}</a>
             {% endif %}
         {% endif %}
     {% endfor %}
     </div>
-
-{% else %}
-
-    <div class="list-group">
-
-
-{% for item in site.data.dashboard.goals %}
-
-    {% assign todos = 0 %}
-    {% assign doings = 0 %}
-    {% assign dones = 0 %}
-    {% assign items = 0 %}
-
-    {% assign issues_total = 0 %}
-    {% assign todos_percent = 0 %}
-    {% assign doings_percent = 0 %}
-    {% assign dones_percent = 0 %}
-
-    {% if item.grouping == 'datagov' %}
-
-        {% for indicator in site.indicators %}
-            {% if indicator.goal == item.goal %}
-                {% for item in indicator.items %}
-                    {% assign items = items | plus:1 %}
-                    {% assign todos = todos | plus:item.todo %}
-                    {% assign doings = doings | plus:item.doing %}
-                    {% assign dones = dones | plus:item.done %}
-                {% endfor %}
-            {% endif %}
-
-        {% endfor %}
-
-        {% assign issues_total = todos | plus:doings | plus:dones | round: 1 %}
-
-        {% assign todos_percent = todos | divided_by:issues_total | times:100 %}
-        {% assign doings_percent = doings | divided_by:issues_total | times:100 %}
-        {% assign dones_percent = dones | divided_by:issues_total | times:100 %}
-
-
-        <a class="list-group-item" href="./{{ item.goal }}">
-            <span class="badge">{{ items }}</span>
-            {{ item.goal }} - {{ item.name }}
-
-            <div class="progress">
-              {{ site.data.bootstrap.progress_done }}{{ dones_percent }}{{ site.data.bootstrap.progress_end}}
-              {{ site.data.bootstrap.progress_doing }}{{ doings_percent }}{{ site.data.bootstrap.progress_end }}
-              {{ site.data.bootstrap.progress_todo }}{{ todos_percent }}{{ site.data.bootstrap.progress_end }}
-            </div>
-
-        </a>
-
-    {% else %}
-        <a class="list-group-item disabled">{{ item.goal }} - {{ item.name }}</a>
-    {% endif %}
-
-
-{% endfor %}
-
-
-    </div>
-
-
 {% endif %}
 </div>
