--- a/_includes/dashboard/indicator.html
+++ b/_includes/dashboard/indicator.html
@@ -5,24 +5,24 @@
 </h3>
 <b>{{ page.title }}</b>
 
-{% for item in page.datasets %}
+{% for dataset in page.datasets %}
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">{{ item.item }}</h3><br>
+    <h3 class="panel-title">{{ dataset.dataset }}</h3><br>
     <div class="progress">
 
-      {% assign issues_total = item.done | plus:item.doing | plus:item.todo | round: 1 %}
+      {% assign issues_total = dataset.done | plus:dataset.doing | plus:dataset.todo | round: 1 %}
 
-      {% assign done_percent = item.done | divided_by:issues_total | times:100 %}
-      {% assign doing_percent = item.doing | divided_by:issues_total | times:100 %}
-      {% assign todo_percent = item.todo | divided_by:issues_total | times:100 %}
+      {% assign done_percent = dataset.done | divided_by:issues_total | times:100 %}
+      {% assign doing_percent = dataset.doing | divided_by:issues_total | times:100 %}
+      {% assign todo_percent = dataset.todo | divided_by:issues_total | times:100 %}
 
       {{ site.data.bootstrap.progress_done }}{{ done_percent }}{{ site.data.bootstrap.progress_end}}
       {{ site.data.bootstrap.progress_doing }}{{ doing_percent}}{{ site.data.bootstrap.progress_end }}
       {{ site.data.bootstrap.progress_todo }}{{ todo_percent }}{{ site.data.bootstrap.progress_end }}
     </div>
 
-    {% for issue in item.issues %}
+    {% for issue in dataset.issues %}
     {% if issue.issue == 'info' %}<p>{{ site.data.bootstrap.alert_info }}<a href="{{ issue.url }}" target="_blank">{% if issue.text %}{{ issue.text }}{% else %}{{ issue.url }}{% endif %}</a>{{ site.data.bootstrap.alert_end }}</p>{% endif %}
     {% if issue.issue == 'todo' %}<p>{{ site.data.bootstrap.alert_todo }}<a href="{{ issue.url }}" target="_blank">{% if issue.text %}{{ issue.text }}{% else %}{{ issue.url }}{% endif %}</a>{{ site.data.bootstrap.alert_end }}</p>{% endif %}
     {% if issue.issue == 'doing' %}<p>{{ site.data.bootstrap.alert_doing }}<a href="{{ issue.url }}" target="_blank">{% if issue.text %}{{ issue.text }}{% else %}{{ issue.url }}{% endif %}</a>{{ site.data.bootstrap.alert_end }}</p>{% endif %}
