--- a/_includes/dashboard/subgoals.html
+++ b/_includes/dashboard/subgoals.html
@@ -3,9 +3,9 @@
         {% if indicator.subgoal %}
             <h3>
                 <a href=".{{ indicator.goal }}-{{ indicator.subgoal }}-{{ indicator.indicator }}">
-                {{ site.data.alerts.label_default }}
+                {{ site.data.bootstrap.label_default }}
                     {{ indicator.subgoal }}
-                {{ site.data.alerts.label_end }}
+                {{ site.data.bootstrap.label_end }}
                 </a>
                 &nbsp; {{ indicator.title }}
             </h3>
@@ -15,16 +15,16 @@
                   <div class="panel-heading">
                     <h3 class="panel-title">{{ dataset.dataset }}</h3><br>
                     <div class="progress">
-                      {{ site.data.alerts.progress_done }}{{ dataset.done }}{{ site.data.alerts.progress_end}}
-                      {{ site.data.alerts.progress_doing }}{{ dataset.doing }}{{ site.data.alerts.progress_end }}
-                      {{ site.data.alerts.progress_todo }}{{ dataset.todo }}{{ site.data.alerts.progress_end }}
+                      {{ site.data.bootstrap.progress_done }}{{ dataset.done }}{{ site.data.bootstrap.progress_end}}
+                      {{ site.data.bootstrap.progress_doing }}{{ dataset.doing }}{{ site.data.bootstrap.progress_end }}
+                      {{ site.data.bootstrap.progress_todo }}{{ dataset.todo }}{{ site.data.bootstrap.progress_end }}
                     </div>
 
                     {% for issue in dataset.issues %}
-                    {% if issue.issue == 'info' %}<p>{{ site.data.alerts.alert_info }}<a href="{{ issue.url }}" target="_blank">{% if issue.text %}{{ issue.text }}{% else %}{{ issue.url }}{% endif %}</a>{{ site.data.alerts.alert_end }}</p>{% endif %}
-                    {% if issue.issue == 'todo' %}<p>{{ site.data.alerts.alert_todo }}<a href="{{ issue.url }}" target="_blank">{% if issue.text %}{{ issue.text }}{% else %}{{ issue.url }}{% endif %}</a>{{ site.data.alerts.alert_end }}</p>{% endif %}
-                    {% if issue.issue == 'doing' %}<p>{{ site.data.alerts.alert_doing }}<a href="{{ issue.url }}" target="_blank">{% if issue.text %}{{ issue.text }}{% else %}{{ issue.url }}{% endif %}</a>{{ site.data.alerts.alert_end }}</p>{% endif %}
-                    {% if issue.issue == 'done' %}<p>{{ site.data.alerts.alert_done }}<a href="{{ issue.url }}" target="_blank">{% if issue.text %}{{ issue.text }}{% else %}{{ issue.url }}{% endif %}</a>{{ site.data.alert_end }}</p>{% endif %}
+                    {% if issue.issue == 'info' %}<p>{{ site.data.bootstrap.alert_info }}<a href="{{ issue.url }}" target="_blank">{% if issue.text %}{{ issue.text }}{% else %}{{ issue.url }}{% endif %}</a>{{ site.data.bootstrap.alert_end }}</p>{% endif %}
+                    {% if issue.issue == 'todo' %}<p>{{ site.data.bootstrap.alert_todo }}<a href="{{ issue.url }}" target="_blank">{% if issue.text %}{{ issue.text }}{% else %}{{ issue.url }}{% endif %}</a>{{ site.data.bootstrap.alert_end }}</p>{% endif %}
+                    {% if issue.issue == 'doing' %}<p>{{ site.data.bootstrap.alert_doing }}<a href="{{ issue.url }}" target="_blank">{% if issue.text %}{{ issue.text }}{% else %}{{ issue.url }}{% endif %}</a>{{ site.data.bootstrap.alert_end }}</p>{% endif %}
+                    {% if issue.issue == 'done' %}<p>{{ site.data.bootstrap.alert_done }}<a href="{{ issue.url }}" target="_blank">{% if issue.text %}{{ issue.text }}{% else %}{{ issue.url }}{% endif %}</a>{{ site.data.alert_end }}</p>{% endif %}
                     {% endfor %}
                   </div>
                   <div class="panel-body">
