--- a/_layouts/dashboard.html
+++ b/_layouts/dashboard.html
@@ -1,13 +1,14 @@
 ---
 layout: default
 ---
+{% include breadcrumbs.html %}
 
 <div class="col-sm-12 col-md-3 sidebar">
   {% include dashboard/sidebar.html %}
 </div>
 <div class="col-sm-12 col-md-9 main">
   {% if page.goal %}
-  {% include dashboard/indicator.html %}
+    {% include dashboard/indicator.html %}
   {% endif %}
 
   {{ content }}
