--- a/_layouts/goal.html
+++ b/_layouts/goal.html
@@ -7,55 +7,10 @@ layout: default
 </div>
 
 <div class="col-sm-12 col-md-9 main">
-  {% for item in site.data.goals.goal %}
-       {% if item.goal == page.goal %}
-          <h1>
-              {{ item.goal }} - {{ item.title }}
-          </h1>
-      {% endif %}
-  {% endfor %}
+
+  {% include dashboard/goal.html %}
 
 
-  {{ content }}
-
-  {%
-      assign todos = 0
-      assign doings = 0
-      assign dones = 0
-      assign datasets = 0
-  %}
-
-  {% for indicator in site.indicators %}
-      {% if indicator.goal == page.goal %}
-          {% for dataset in indicator.datasets %}
-              {% assign datasets = datasets | plus:1 %}
-              {% assign todos = todos | plus:dataset.todo %}
-              {% assign doings = doings | plus:dataset.doing %}
-              {% assign dones = dones | plus:dataset.done %}
-          {% endfor %}
-      {% endif %}
-  {% endfor %}
-
-  {% assign issues_total = todos | plus:doings | plus:dones | round: 1 %}
-
-  {% assign todos_percent = todos | divided_by:issues_total | times:100 %}
-  {% assign doings_percent = doings | divided_by:issues_total | times:100 %}
-  {% assign dones_percent = dones | divided_by:issues_total | times:100 %}
-
-  <h2>Total Progress on {{ datasets }} Datasets</h2>
-
-      <div class="progress">
-        {{ site.data.bootstrap.progress_done }}{{ dones_percent }}{{ site.data.bootstrap.progress_end}}
-        {{ site.data.bootstrap.progress_doing }}{{ doings_percent }}{{ site.data.bootstrap.progress_end }}
-        {{ site.data.bootstrap.progress_todo }}{{ todos_percent }}{{ site.data.bootstrap.progress_end }}
-      </div>
-
-      <h2>
-        {{ site.data.bootstrap.label_done }}Done <span class="badge">{{ todos_percent }} %</span>{{ site.data.bootstrap.label_end }}
-        {{ site.data.bootstrap.label_doing }}Doing <span class="badge">{{ doings_percent }} %</span>{{ site.data.bootstrap.label_end }}
-        {{ site.data.bootstrap.label_todo }}Todo <span class="badge">{{ dones_percent }} %</span>{{ site.data.bootstrap.label_end }}
-      </h2>
-
-      {% include dashboard/subgoals.html %}
+  {% include dashboard/subgoals.html %}
 
 </div>
