--- a/_includes/dashboard/subgoals.html
+++ b/_includes/dashboard/subgoals.html
@@ -24,7 +24,7 @@
             {% endfor %}
             </div>
             <div class="panel-body">
-              <a class="btn btn-danger pull-right" href="{{ site.github.repository_url }}/edit/{{ site.branch }}/{{ page.path }}">Edit</a>
+              <a class="btn btn-danger pull-right" href="{{ site.github.repository_url }}/edit/{{ site.branch }}/{{ indicator.path }}">Edit</a>
               {{ indicator.content | markdownify }}
             </div>
           </div>
