--- a/_layouts/goal.html
+++ b/_layouts/goal.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{% include breadcrumbs.html %}
+{% include breadcrumbs.html parent="Dashboard" %}
 <div class="col-sm-12 col-md-3 sidebar">
   {% include dashboard/sidebar.html %}
 </div>
